Move signals out of space